src/objects/Quantum_Site_Information__c.object
<CustomObject>
    <fields>
        <fullName>Asbestos_Report_Available__c</fullName>
        <label>Asbestos Report Available</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-None-</fullName>
                    <default>true</default>
                    <label>-None-</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Address__c</fullName>
        <description>Installation address Mock field</description>
        <label>Installation Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to track if the Quantum site record is Active or In-active</description>
        <label>Is Inactive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SiteContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SiteContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Wayleave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Wayleave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Order_Summary_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is a flag to know that Order summary is accepected</description>
        <label>Order Summary Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <label>Lease</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_freehold__c</fullName>
        <label>Own freehold?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Basket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Basket</label>
        <referenceTo>cscfga__Product_Basket__c</referenceTo>
        <relationshipName>Quantum_Sites_Information_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Planning_Details_Status__c</fullName>
        <label>Product Planning Details Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                    <default>true</default>
                    <label>Not started</label>
                </value>
                <value>
                    <fullName>In-progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantum_Site_Information_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Quantum_Sites_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantum_Site_Information_Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Quantum_Sites_Information</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiteId__c</fullName>
        <label>SiteId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact_MIA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture the additional site contact details for MIA products</description>
        <label>Site Contact MIA</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quantum Site Planning Details (Site Contact MIA)</relationshipLabel>
        <relationshipName>Quantum_Site_Planning_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quantum Site Planning Details (Site Contact)</relationshipLabel>
        <relationshipName>Quantum_Site_Planning_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WayLeave_Required_for_Landlord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WayLeave Required for Landlord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WayLeave_Required_for_Tenant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WayLeave Required for Tenant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wayleave_Email__c</fullName>
        <label>Wayleave Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wayleave_Phone__c</fullName>
        <label>Wayleave Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wayleave_Saved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wayleave Saved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wayleave_Status__c</fullName>
        <label>Wayleave Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                    <default>true</default>
                    <label>Not started</label>
                </value>
                <value>
                    <fullName>In-progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wayleave_for_Tanent__c</fullName>
        <description>Formula field used in conga workflow to generate document</description>
        <formula>&quot;&amp;Id=&quot;+Id+
&quot;&amp;TemplateId=&quot;+$Setup.LG_Congatemplates__c.LG_Wayleave_for_Tenant__c+
&quot;&amp;DefaultPDF=1&quot;+
&quot;&amp;SC0=1&quot;+
&quot;&amp;SC1=Attachments&quot;+
&quot;&amp;AttachmentParentID=&quot;+Quantum_Site_Information_Opportunity__c+
&quot;&amp;QMode=Attachments&quot;+
&quot;&amp;OFN=CPK_Wayleave_for_Tenant_&quot;+Quantum_Site_Information_Opportunity__r.Name+&quot;_&quot;+Id +&quot;_&quot;+ TEXT(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wayleave for Tanent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wayleave_for_landlord__c</fullName>
        <description>Formula field used in conga workflow to generate document</description>
        <formula>&quot;&amp;Id=&quot;+Id+
&quot;&amp;TemplateId=&quot;+$Setup.LG_Congatemplates__c.LG_Wayleave_for_LandLord__c+
&quot;&amp;DefaultPDF=1&quot;+
&quot;&amp;SC0=1&quot;+
&quot;&amp;SC1=Attachments&quot;+
&quot;&amp;AttachmentParentID=&quot;+Quantum_Site_Information_Opportunity__c+
&quot;&amp;QMode=Attachments&quot;+
&quot;&amp;OFN=CPK_Wayleave_for_LandLord_&quot;+Quantum_Site_Information_Opportunity__r.Name+&quot;_&quot;+Id +&quot;_&quot;+ TEXT(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wayleave for landlord</label>
        <type>Text</type>
    </fields>
    <label>Quantum Site Planning Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Asbestos_Report_Available__c</columns>
        <columns>Quantum_Site_Information_Contact__c</columns>
        <columns>First_Name__c</columns>
        <columns>Installation_Address__c</columns>
        <columns>Is_SiteContact__c</columns>
        <columns>Is_Wayleave__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Lease__c</columns>
        <columns>Middle_Name__c</columns>
        <columns>LG_Order_Summary_Accepted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QSI-{000}</displayFormat>
        <label>Quantum Site Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quantum Site Planning Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>